...
        items: const [
          BottomNavigationBarItem(
              icon: Icon(Icons.home_rounded), label: 'Inicio'),
          BottomNavigationBarItem(
              icon: Icon(Icons.book_rounded), label: 'Cursos'),
          BottomNavigationBarItem(
              icon: Icon(Icons.analytics_rounded), label: 'Analíticas'),
          BottomNavigationBarItem(
              icon: Icon(Icons.person_rounded), label: 'Perfil'),
        ],
      ),
    );
  }
...
